* As a user I can access accounts from an ENV variable